--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	 <link rel="preconnect" href="https://fonts.googleapis.com">
 	
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-	<title>Login</title>
+	<title>My Ride</title>
 
 	<style type="text/css">
 		
