--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 			</span>	
 			<h2>WELCOME</h2>
 			<h3>To My Ride</h3>
-			<p> SAFE & AFFORDABLE..<br>Our goal is to help make transpotation easy and reduce the rick of crime, <br> bringing a ride right at your desire location. </p>
+			<p> SAFE & AFFORDABLE..<br>Our goal is to help make transpotation easy and reduce the rick of crime, <br> Bringing a ride right at your desire location. </p>
 		</div>	
 
 		<div class="btn">
