--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	 <link rel="preconnect" href="https://fonts.googleapis.com">
 	
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-	<title>My Ride</title>
+	<title>Login</title>
 
 	<style type="text/css">
 		
@@ -61,6 +61,7 @@
 			width: 130px;
 			height: 40px;
 			margin-bottom: 50px;
+			font-size: 30px;
 		}
 
 		
@@ -95,18 +96,19 @@
 			padding: 20px;
 			flex-direction: column;
 			width: 100%;
-			height: 100vh;			
-			background-color: white;
+			height: 110vh;			
+			background-color: crimson ;
 			background-repeat: no-repeat;
 			object-fit: cover;
 			justify-content: center;
 			align-items: center;
 		}
 
-		#form-page p{
+		.login p{
 			font-size: 40px;
 			font-weight: 400;
-			margin-top: 20px;
+			padding-bottom: -20px;
+
 		}
 
 		#form-page .login {
@@ -147,12 +149,14 @@
     		flex-direction: column;
     		align-items: center;
     		text-align: center;
+    		font-size: 20px;
 		}
 
 		.login .button {
   		    margin-top: 30px;
   		    text-align: center;
   		    margin-bottom: 30px;
+  		    font-size: 30px;
 		}
 
 
@@ -169,7 +173,7 @@
 			</span>	
 			<h2>WELCOME</h2>
 			<h3>To My Ride</h3>
-			<p> SAFE & AFFORDABLE..<br>Our goal is to help make transpotation easy and reduce the rick of crime, <br> Bringing a ride right at your desire location. </p>
+			<p> SAFE & AFFORDABLE..<br>Our goal is to help make transpotation easy and reduce the rick of crime, <br> bringing a ride right at your desire location. </p>
 		</div>	
 
 		<div class="btn">
