--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	<section id="form-page">
 		
 		<div class="login">
-			<p>Ready to book?</p>
+			<p>Enter Booking Details?</p>
 			<div class="input">
 				<label>Name:</label>
 				<input type="text" id="name" placeholder="Targee Seneh" required>
